objects/State_Tire_Fee_Calculator__c/State_Tire_Fee_Calculator__c.object-meta.xml
<CustomObject>
    <label>State Tire Fee Calculator</label>
    <nameField>
        <displayFormat>STFC-{0000}</displayFormat>
        <label>STFC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Tire Fee Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>