objects/State_Tire_Fee_Calculator__c/fields/Section_Width__c.field-meta.xml
<CustomField>
    <fullName>Section_Width__c</fullName>
    <label>Section Width</label>
    <length>50</length>
    <type>Text</type>
</CustomField>