objects/State_Tire_Fee_Calculator__c/fields/State_Fees__c.field-meta.xml
<CustomField>
    <fullName>State_Fees__c</fullName>
    <label>State Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>