objects/State_Tire_Fee_Calculator__c/fields/Tire_Rim__c.field-meta.xml
<CustomField>
    <fullName>Tire_Rim__c</fullName>
    <label>Tire Rim</label>
    <length>50</length>
    <type>Text</type>
</CustomField>