objects/State_Tire_Fee_Calculator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delivery_State__c</columns>
    <columns>Section_Width__c</columns>
    <columns>Tire_Rim__c</columns>
    <columns>State_Fees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>